# ddcar-news-analysis

./: .gitignore  LICENSE  README.md  ddcar_articles.csv  ddcar_checkpoint.json  pyproject.toml
.github/ISSUE_TEMPLATE/: issue-template.md
data/: ddcar_brands.csv
src/: extract_brand.py  task.py
