[tool.poetry]
name = "ddcar-news-analysis"
version = "0.1.0"
description = ""
authors = ["kuanwen-C <128893625+kuanwen-C@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
pandas = "^2.2.3"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
